# ECC

./: .gitignore  README.md
Raspi/: CMakeLists.txt  main.cpp
Raspi/config/: clock_system_config.hpp  closk_system_config.hpp  error.hpp  errror.cpp  hardconfig.cpp  hardconfig.h  hardconfig.hpp  hardware_config.hpp  softconfig.cpp  softconfig.hpp
Raspi/inc/: CMakeLists.txt
Raspi/inc/app_tasks/: clock_system.hpp
Raspi/inc/hardware/: hardware.hpp
Raspi/inc/helper/: filesystem.hpp  initialization.hpp
Raspi/install/: sfml-setup.sh
Raspi/lib/: .gitignore  CMakeLists.txt
Raspi/src/: CMakeLists.txt  main.cpp
Raspi/src/app_tasks/: CMakeLists.txt  clock_system.cpp  clock_system.hpp
Raspi/src/hardware/: hardware.cpp
Raspi/src/helper/: filesystem.cpp  initialization.cpp
docs/: branch_data.txt  diary.txt  file_data.txt  file_data_template  memo.txt
test/: 06-01-print.py  ADtest.py  CMakeLists.txt  clock_test  clock_test.cpp  test1.cpp  thread_test  thread_test.cpp
